--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
+setuptools==75.6.0
 pandas==2.2.3
-matplotlib==3.6.2
-scikit-learn==1.2.0
-numpy==2.0.0
-yfinance==0.1.67
+scikit-learn==1.5.2
+yfinance==0.2.50
